Fix for #2563 - OrderedLayout flicker on repaint Changed Label so it never wraps when its width is undefined. Changed default Label width to 100%.
svn changeset:6842/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -234,6 +234,10 @@ input.i-modified,
 	padding-bottom: 1px;
 }
 
+.i-label-undef-w {
+	white-space: nowrap;
+}
+
 /* Loading indicator states
  * Note: client side expects that loading indicator has a height. It depends on
  * this css property to ensure browsers have applied all required styles.
