--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -414,6 +414,10 @@ input.i-modified,
 	padding-bottom: 1px;
 }
 
+.i-label-undef-w {
+	white-space: nowrap;
+}
+
 /* Loading indicator states
  * Note: client side expects that loading indicator has a height. It depends on
  * this css property to ensure browsers have applied all required styles.
@@ -845,6 +849,10 @@ input.i-modified,
  * Link component styles 
  * (useless to move into a separate file)
  */
+.i-link {
+	white-space: nowrap;	
+}
+
 .i-link a {
 	color: #464f52;
 	vertical-align: middle;
